--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <main class="app">
       <header>
-        <h1>目の開きと連動する口の変形エフェクト</h1>
+        <h1>自動で口が開閉するフェイスエフェクト</h1>
         <p>
-          カメラの目の開き具合に合わせて口が大きく開いて見えるエフェクトです。
+          3秒周期で口が大きく開いて閉じるエフェクトです。
         </p>
       </header>
 
@@ -25,10 +25,6 @@
         <label>
           口の最大開き
           <input type="range" min="1" max="2.8" step="0.05" value="2" id="mouthScale" />
-        </label>
-        <label>
-          目の感度
-          <input type="range" min="0.02" max="0.12" step="0.005" value="0.06" id="eyeSensitivity" />
         </label>
       </section>
 
