--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>目の開きで口が開くフェイスエフェクト</title>
+    <title>口が勝手に開くフェイスエフェクト</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="app">
       <header>
         <h1>自動で口が開閉するフェイスエフェクト</h1>
-        <p>
-          3秒周期で口が大きく開いて閉じるエフェクトです。
-        </p>
+
       </header>
 
       <section class="stage">
