--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <video class="input-video" autoplay playsinline></video>
         <canvas class="output-canvas"></canvas>
         <div class="status" aria-live="polite"></div>
+        <button class="fullscreen-btn" aria-label="フルスクリーン" title="フルスクリーン">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"/>
+          </svg>
+        </button>
       </section>
 
       <section class="controls">
